# ai-manufacturing-intelligence

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: ARCHITECTURE.md  CASE_STUDY.md  QUALITY.md  REVIEW_CHECKLIST.md  ROADMAP.md
src/aimi/: api.py  cli.py  dashboard.py  energy_intelligence.py  generator.py  modeling.py  optimization.py  pipeline.py  service.py
tests/: test_generator_pipeline.py  test_model_optimize_api.py
